# tap-tableau

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-tableau-metadata.sh  tap-tableau.sh  tox.ini
.github/workflows/: ci_workflow.yml
tap_tableau/: client.py  streams.py  tap.py  utils.py
tap_tableau/tests/: __init__.py  test_core.py
